--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,15 @@ header {
     color: #FABE58;
     font-size: 1.5em;
 }
+
+.white-popup {
+    position: relative;
+    background: #5C97BF;
+    color: #FABE58;
+    padding: 20px;
+    width:auto;
+    max-width: 500px;
+    margin: 20px auto;
+    font-size: 2em;
+    text-align: center;
+  }
