--- a/css/style.css
+++ b/css/style.css
@@ -69,8 +69,8 @@ a:focus {
 }
 
 button {
-    width: 400px;
-    height: 60px;
+    width: 100%;
+    height: 100%;
     background-color: #EC644B;
     color: #E4F1FE;
     border: none;
