--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ header {
     width: 100%;
     height: 12vh;
     text-align: center;
+    /* text-justify: center; */
     margin-top: 30px;
 }
 
@@ -20,9 +21,26 @@ header {
     margin: auto;
 }
 
-.score {
+.header-text {
     color: #2C3E50;
-    margin: auto;
+}
+
+.main-container {
+    width: 100%;
+    display: flex;
+}
+
+.side-container {
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+p {
+    color: #E4F1FE;
+    font-size: 2.75em;
 }
 
 .game-container {
