--- a/css/style.css
+++ b/css/style.css
@@ -89,21 +89,36 @@ a:focus {
 button {
     width: 100%;
     height: 100%;
-    background-color: #EC644B;
-    color: #E4F1FE;
+    background-color: #5C97BF;
+    color: #FABE58;
     border: none;
-    margin: 2px;
-    font-size: 1em;
+    font-size: 1.5em;
 }
 
-.popup {
+#closesubmit {
+    width: 300px;
+    height: 50px;
+    background-color: #EC644B;
+    color: #FABE58;
+    border: none;
+    font-size: 25px;
+    text-align: center;
+}
+button:focus {
+    outline: none;
+}
+
+.modal-dialog {
     position: relative;
+    display: block;
     background: #5C97BF;
     color: #FABE58;
-    padding: 20px;
-    width:auto;
-    max-width: 500px;
-    margin: 20px auto;
     font-size: 1.5em;
-    text-align: center;
-  }
+}
+
+.modal-content {
+position: relative;
+background: #5C97BF;
+color: #FABE58;
+font-size: 1.5em;
+}
