--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header {
     width: 100%;
     height: 12vh;
     text-align: center;
-    /* text-justify: center; */
+    text-justify: center;
     margin-top: 30px;
 }
 
@@ -23,6 +23,7 @@ header {
 
 .header-text {
     color: #2C3E50;
+    font-size: 4em;
 }
 
 .main-container {
@@ -64,6 +65,8 @@ p {
 .category {
     background-color: #5C97BF;
     text-align: center;
+    justify-content: center;
+    padding-top: 8px;
     color: #FABE58;
     font-size: 1em;
 }
@@ -110,7 +113,10 @@ button:focus {
 
 .modal-dialog {
     position: relative;
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     background: #5C97BF;
     color: #FABE58;
     font-size: 1.5em;
@@ -118,7 +124,55 @@ button:focus {
 
 .modal-content {
 position: relative;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+justify-content: center;
 background: #5C97BF;
 color: #FABE58;
 font-size: 1.5em;
+}
+
+.modal-header {
+    position: relative;
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: column;
+    background: #5C97BF;
+    color: #FABE58;
+    font-size: 1.5em;
+}
+
+.modal-body {
+    position: relative;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    background: #5C97BF;
+    color: #FABE58;
+    font-size: 1.5em;
+}
+
+.radio {
+    display: flex;
+    flex-direction: column;
+    align-content: center;
+    width: 100%;
+}
+
+.btn-primary {
+    background-color: #2C3E50;
+    border: none;
+    width: 400px;
+    color: #E4F1FE;
+    margin: 1px 3px 1px 3px;
+}
+
+
+button.close {
+    width: 15%;
 }
