--- a/css/cssmid.css
+++ b/css/cssmid.css
@@ -1,5 +1,7 @@
 
 
+
+
 body {
     background-color: #2C3E50;
     display: flex;
@@ -10,10 +12,11 @@ body {
 header {
     background-color: #EC644B;
     width: 100%;
-    height: 80px;
+    height: 50px;
     text-align: center;
     text-justify: center;
-    margin-top: 30px;
+    margin-top: 15px;
+    padding-top: 5px;
 }
 
 .player {
@@ -23,30 +26,34 @@ header {
 
 .header-text {
     color: #2C3E50;
-    font-size: 4em;
+    font-size: 2em;
 }
 
 .main-container {
     width: 100%;
-    display: flex;
-}
-
-.side-container {
-    width: 20%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
+.side-container {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+}
+
 p {
     color: #E4F1FE;
-    font-size: 2.75em;
+    font-size: 1.5em;
+    margin: 10px 8px 0 8px;
 }
 
 .game-container {
-    width: 60%;
-    height: 70vh;
+    width: 80%;
+    height: 80vh;
     
     /* border: 1px solid white; */
     margin-top: 20px;
@@ -68,7 +75,10 @@ p {
     justify-content: center;
     padding-top: 8px;
     color: #FABE58;
-    font-size: 1em;
+}
+
+h3 {
+    font-size: 1.7em;
 }
 
 .answer {
