--- a/css/cssxsm.css
+++ b/css/cssxsm.css
@@ -109,13 +109,14 @@ button {
 }
 
 #closesubmit {
-    width: 300px;
-    height: 50px;
+    width: 200px;
+    height: 30px;
     background-color: #EC644B;
     color: #FABE58;
     border: none;
-    font-size: 25px;
+    font-size: 15px;
     text-align: center;
+    padding-bottom: 10px;
 }
 button:focus {
     outline: none;
@@ -129,7 +130,7 @@ button:focus {
     flex-direction: column;
     background: #5C97BF;
     color: #FABE58;
-    font-size: 1em;
+
 }
 
 .modal-content {
@@ -152,7 +153,7 @@ button:focus {
     flex-direction: column;
     background: #5C97BF;
     color: #FABE58;
-    font-size: 1em;
+    font-size: .25em;
 }
 
 .modal-body {
@@ -180,6 +181,7 @@ button:focus {
     width: 200px;
     color: #E4F1FE;
     margin: 1px 3px 1px 3px;
+    white-space: normal;
 }
 
 
