--- a/css/csssm.css
+++ b/css/csssm.css
@@ -32,10 +32,36 @@ header {
 .main-container {
     width: 100%;
     height: 100%;
-    display: flex;
+    display: none;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.intro-container {
+    width: 85%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 75px;
+}
+
+.intro-container h1 {
+    color: #E4F1FE;
+    font-size: 2.75em;
+}
+
+.intro-container p {
+    color: #E4F1FE;
+    font-size: 1.5em;
+    text-align: center;
+}
+.intro-container button {
+    width: 300px;
+    height: 60px;
+    font-size: 30px;
+    margin-top: 40px;
 }
 
 .side-container {
