--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,33 @@ header {
 
 .main-container {
     width: 100%;
+    display: none;
+}
+
+.intro-container {
+    width: 60%;
+    height: 70vh;
     display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 75px;
+}
+
+.intro-container h1 {
+    color: #E4F1FE;
+    font-size: 2.75em;
+}
+
+.intro-container p {
+    color: #E4F1FE;
+    font-size: 1.75em;
+    text-align: center;
+}
+.intro-container button {
+    width: 300px;
+    height: 60px;
+    font-size: 30px;
+    margin-top: 40px;
 }
 
 .side-container {
