Added width 100% to modal content in  all CSS files to remove the black lines from the modal in the 'not food' category.

--- a/css/cssmid.css
+++ b/css/cssmid.css
@@ -187,6 +187,7 @@ button:focus {
 .modal-content {
     position: relative;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
