--- a/css/style.css
+++ b/css/style.css
@@ -177,6 +177,7 @@ button:focus {
 .modal-content {
     position: relative;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
@@ -189,6 +190,7 @@ button:focus {
 .modal-header {
     position: relative;
     display: flex;
+    width: 100%;
     /* align-items: center; */
     /* justify-content: center; */
     flex-direction: column;
