--- a/css/csssm.css
+++ b/css/csssm.css
@@ -187,6 +187,7 @@ button:focus {
 .modal-content {
     position: relative;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
