--- a/css/cssxmid.css
+++ b/css/cssxmid.css
@@ -181,6 +181,7 @@ button:focus {
 .modal-content {
     position: relative;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
