--- a/css/cssxsm.css
+++ b/css/cssxsm.css
@@ -188,6 +188,7 @@ button:focus {
 .modal-content {
     position: relative;
     display: flex;
+    width: 100%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
